# rf-detr

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CNAME  README.md  inference.py  mkdocs.yaml  pyproject.toml  requirements.txt  train.py
.github/: CODEOWNERS  CONTRIBUTING.md  LICENSE_HEADER.txt  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-package.yml  ci-build-docs.yml  ci-integrations.yml  ci-tests-cpu.yml  ci-tests-gpu.yml  pr-conflict-labeler.yml  publish-docs.yml  publish-pre-release.yml  publish-release.yml
docs/: index.md
docs/learn/: benchmarks.md  deploy.md  export.md  install.md  pretrained.md
docs/learn/run/: detection.md  segmentation.md
docs/learn/train/: advanced.md  augmentations.md  dataset-formats.md  index.md  loggers.md  training-parameters.md
docs/reference/: 2xlarge.md  base.md  large.md  large_deprecated.md  medium.md  nano.md  rfdetr.md  seg_2xlarge.md  seg_large.md  seg_medium.md  seg_nano.md  seg_preview.md  seg_small.md  seg_xlarge.md  segmentation_train_config.md  small.md  train_config.md  xlarge.md
docs/theme/partials/: header.html
docs/tutorials/: index.md
notebooks/: release-demo_1-5.ipynb
src/rfdetr/: __init__.py  config.py  detr.py  engine.py  main.py
src/rfdetr/assets/: __init__.py  model_weights.py
src/rfdetr/cli/: main.py
src/rfdetr/datasets/: __init__.py  _develop.py  aug_config.py  coco.py  coco_eval.py  o365.py  save_grids.py  synthetic.py  transforms.py  yolo.py
src/rfdetr/deploy/: benchmark.py  export.py
src/rfdetr/deploy/_onnx/: __init__.py  optimizer.py  symbolic.py
src/rfdetr/models/: __init__.py  lwdetr.py  matcher.py  position_encoding.py  segmentation_head.py  transformer.py
src/rfdetr/models/backbone/: __init__.py  backbone.py  base.py  dinov2.py  dinov2_with_windowed_attn.py  projector.py
src/rfdetr/models/ops/functions/: __init__.py  ms_deform_attn_func.py
src/rfdetr/models/ops/modules/: __init__.py  ms_deform_attn.py
src/rfdetr/platform/: __init__.py  models.py  platform_downloads.py
src/rfdetr/util/: __init__.py  benchmark.py  box_ops.py  coco_classes.py  drop_scheduler.py  early_stopping.py  files.py  get_param_dicts.py  logger.py  metrics.py  misc.py  obj365_to_coco_model.py  package.py  utils.py  visualize.py
src/rfdetr/utilities/: __init__.py  decorators.py
tests/: conftest.py  helpers.py  test_engine.py  try_instantiate_all_models.py
tests/assets/: test_downloads.py  test_model_weights.py
tests/benchmarks/: conftest.py  test_coco_inference.py  test_synthetic_convergence.py  test_trt_inference.py
tests/datasets/: test_augmentations.py  test_coco.py  test_coco_resize_config.py  test_save_grids.py  test_synthetic.py  test_yolo.py
tests/models/: test_config.py  test_drop_path.py  test_export.py  test_predict.py  test_segmentation_head.py  test_train_resume.py  test_transformer.py
tests/models/backbone/: test_windowed_dino.py
tests/util/: __init__.py  test_box_ops.py  test_decorators.py  test_file_validation.py  test_metrics.py  test_misc.py
